--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.45.3",
-    "@types/node": "^22.0.0"
+    "@types/node": "^22.0.0",
+    "allure-playwright": "^3.0.0-beta.7"
+  },
+  "dependencies": {
+    "allure-commandline": "^2.29.0"
   }
 }
