--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -1,6 +1,10 @@
 name: Allure-Playwright
 on:
   workflow_dispatch:
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
 
 jobs:
   setup-and-run-tests:
@@ -76,17 +80,17 @@ jobs:
 
       # If you put the current history inside allure-results, Allure can generate a report that will merge history files
       - name: Download current history files from S3
-        run: aws s3 cp s3://allure-history-ad/history/ ./merged-allure-results/history --recursive
+        run: aws s3 cp s3://allure-reports212/history/ ./merged-allure-results/history --recursive
 
       - name: Generate Allure report
         run: npx allure generate ./merged-allure-results
 
       # Copy the history to the same S3 bucket to overwrite the previous history files with updated history
       - name: Backup the history with the latest data
-        run: aws s3 cp ./allure-report/history s3://allure-history-ad/history/  --recursive
+        run: aws s3 cp ./allure-report/history s3://allure-reports212/history/  --recursive
 
       - name: Deploy html report to S3
-        run: aws s3 cp ./allure-report s3://allure-history-ad/report/${{ steps.timestampid.outputs.timestamp }}/ --recursive
+        run: aws s3 cp ./allure-report s3://allure-reports212/report/${{ steps.timestampid.outputs.timestamp }}/ --recursive
 
       - name: Write URL in summary
-        run: echo "### Test results - http://allure-history-ad.s3-website.eu-north-1.amazonaws.com/report/${{ steps.timestampid.outputs.timestamp }}/index.html" >> $GITHUB_STEP_SUMMARY
+        run: echo "### Test results - https://allure-reports212.s3-website.eu-north-1.amazonaws.com/report/${{ steps.timestampid.outputs.timestamp }}/index.html" >> $GITHUB_STEP_SUMMARY
