--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -13,10 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix:
-        # shard values will be used to run playwright with sharding feature
-        shardIndex: [ 1, 2, 3 ]
-        shardTotal: [ 3 ]
+    #      matrix:
+    #        # shard values will be used to run playwright with sharding feature
+    #        shardIndex: [ 1, 2, 3 ]
+    #        shardTotal: [ 3 ]
 
     steps:
       - uses: actions/checkout@v4
@@ -32,7 +32,8 @@ jobs:
         run: npx playwright install chromium
 
       - name: Run Playwright tests
-        run: npx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
+        #        run: npx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
+        run: npx playwright test
 
       # Once playwright finishes it will create a folder called 'allure-results'
       - name: Upload results to Artifacts
