--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,6 +8,12 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+      #        # shard values will be used to run playwright with sharding feature
+      shardIndex: [ 1, 2, 3 ]
+      shardTotal: [ 3 ]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -25,3 +31,10 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+      - name: Upload results to Artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results-${{ matrix.shardIndex }} # name of the file you want to have once its uploaded
+          path: allure-results # path on the drive to where the reports are, from where to upload the files.
+          retention-days: 10
