--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,12 +25,12 @@ jobs:
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npx playwright test
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
+      #      - uses: actions/upload-artifact@v4
+      #        if: always()
+      #        with:
+      #          name: playwright-report
+      #          path: playwright-report/
+      #          retention-days: 30
       - name: Upload results to Artifacts
         if: always()
         uses: actions/upload-artifact@v4
@@ -89,4 +89,4 @@ jobs:
         run: aws s3 cp ./allure-report s3://allure-reports212/report/${{ steps.timestampid.outputs.timestamp }}/ --recursive
 
       - name: Write URL in summary
-        run: echo "### Test results - https://allure-reports212.s3-website.eu-north-1.amazonaws.com/report/${{ steps.timestampid.outputs.timestamp }}/index.html" >> $GITHUB_STEP_SUMMARY
+        run: echo "### Test results - https://allure-reports212.s3-website.ap-southeast-1.amazonaws.com/report/${{ steps.timestampid.outputs.timestamp }}/index.html" >> $GITHUB_STEP_SUMMARY
