--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Playwright browsers
-        run: npx playwright install chromium
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
       - name: Run Playwright tests
         #        run: npx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
