Add generate-report workflow :one::three:🫸🌀✏️📗🐧🐳

--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -94,4 +94,4 @@ jobs:
         run: aws s3 cp ./allure-report s3://allure-reports212/report/${{ steps.timestampid.outputs.timestamp }}/ --recursive
 
       - name: Write URL in summary
-        run: echo "### Test results - https://allure-reports212.s3-website.eu-north-1.amazonaws.com/report/${{ steps.timestampid.outputs.timestamp }}/index.html" >> $GITHUB_STEP_SUMMARY
+        run: echo "### Test results - https://allure-reports212.s3-website.ap-southeast-1.amazonaws.com/report/${{ steps.timestampid.outputs.timestamp }}/index.html" >> $GITHUB_STEP_SUMMARY
