--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Set a timestamp
         id: timestampid
         # this will store current time with UTC in outputs.timestamp (eg of value: 20231028_233147Z)
-        run: echo "timestamp=$(TZ='Asia/Jakarta' date --utc +%Y%m%d_%H%M%SZ)" >> "$GITHUB_OUTPUT"
+        run: echo "timestamp=$(TZ='Asia/Jakarta' date +"%Y%m%d_%H%M%SZ")" >> "$GITHUB_OUTPUT"
 
       - name: Download allure results from GitHub Actions Artifacts
         uses: actions/download-artifact@v4
