--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -97,6 +97,9 @@ jobs:
         run: echo "### Test results - https://allure-reports212.s3-website.ap-southeast-1.amazonaws.com/report/${{ steps.timestampid.outputs.timestamp }}/index.html" >> $GITHUB_STEP_SUMMARY
 
   deploy_to_github_page:
+    # Merge reports after playwright tests, even if some shards have failed
+    if: always()
+    needs: [ setup-and-run-tests ]
     runs-on: ubuntu-latest
 
     steps:
